--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -1,17 +1,19 @@
 extends ../templates/page.pug
 
 block variables
-    - var title = "Test Page Title"
+    - title = "Barista Training In Amsterdam"
 
 block content
-    h1 Qui duis ea laboris ad do veniam.
-    +icon('envelope','icon-green')
-    +icon('envelope2','icon-orangered')
-    +icon('map_marker','icon-green')
-    +icon('map_marker','icon-orangered')
-    p Cupidatat laboris velit culpa aute esse id exercitation fugiat ex sit nisi veniam. Amet dolor labore adipisicing quis ea officia dolore cillum amet irure amet elit. Ut nulla ullamco magna dolor cupidatat magna anim. Amet magna dolor nulla deserunt anim voluptate excepteur amet incididunt laborum ea ullamco. Non Lorem pariatur Lorem in ipsum ex enim laboris cupidatat in. Pariatur nisi nisi consectetur fugiat sint et commodo est aliquip elit ad ex.
-    p Magna sit enim mollit anim nulla consequat fugiat officia do nisi duis dolor. Nisi incididunt voluptate reprehenderit reprehenderit ipsum et veniam occaecat exercitation aute veniam in. Dolor commodo incididunt est laborum commodo.
-    +icon('envelope','icon-green')
-    +icon('envelope2','icon-orangered')
-    +icon('map_marker','icon-green')
-    +icon('map_marker','icon-orangered')
+    include ../layout/header.pug
+    include ../blocks/top.pug
+    include ../blocks/programs.pug
+    include ../blocks/gallery.pug
+    div
+        | Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio quod corporis veniam quam beatae error deleniti, ex recusandae modi assumenda vero. Debitis aliquam fuga, totam porro ipsam sed doloremque.
+        | Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio quod corporis veniam quam beatae error deleniti, ex recusandae modi assumenda vero. Debitis aliquam fuga, totam porro ipsam sed doloremque.
+        | Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio quod corporis veniam quam beatae error deleniti, ex recusandae modi assumenda vero. Debitis aliquam fuga, totam porro ipsam sed doloremque.
+        | Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio quod corporis veniam quam beatae error deleniti, ex recusandae modi assumenda vero. Debitis aliquam fuga, totam porro ipsam sed doloremque.
+        
+    include ../blocks/testimonials.pug
+    include ../blocks/feedback.pug
+    include ../layout/footer.pug
