--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -1,29 +1,8 @@
-body {
-    color: green;
-}
-
-h1 {
-    background: orange;
-    padding: 10px;
-    transition: 1s;
-    &:hover {
-        font-style: italic;
-    }
-}
-
-.test {
-    display: flex;
-}
-
-.icon {
-    display: inline-block;
-    width: 1em;
-    height: 1em;
-    fill: currentColor;
-    &-orangered {
-        color: orangered;
-    }
-    &-green {
-        color: green;
-    }
-}
+$html-font-size:16px;
+$transition: 200ms;
+$gold: #eab96a;
+@import './_misc/mixins.scss';
+@import './tags.scss';
+@import './style.scss';
+@import './layout/header.scss';
+@import './blocks/top.scss';
