HTML/CSS Top block draft

--- a/app/pug/layout/header.pug
+++ b/app/pug/layout/header.pug
@@ -1,15 +1,16 @@
 header.header
-    nav.nav
-        ul
-            li
-                a(href="#") Program
-            li
-                a(href="#") Gallery
-            li
-                a(href="#") Reviews
-            li
-                a(href="#") Partners
-            li
-                a(href="#") Contact
-    .header__tel
-        a(href="tel:+380996611730") +38 (099) 66-11-730
+    .header-right
+        nav.nav
+            ul
+                li
+                    a(href="#") Program
+                li
+                    a(href="#") Gallery
+                li
+                    a(href="#") Reviews
+                li
+                    a(href="#") Partners
+                li
+                    a(href="#") Contact
+        .header__tel
+            a(href="tel:+380996611730") +38 (099) 66-11-730
