--- a/app/pug/blocks/top.pug
+++ b/app/pug/blocks/top.pug
@@ -1,2 +1,8 @@
 .top
-    | top block
+    .top-wrap
+        .top-title.top-title_sm Intensive program barista training
+        .title.top-title_lg Barista training in 
+            span.accent Amsterdam
+        .top-title On the basis of the company's largest coffee roasters
+    //- .top__scroll
+    //-     a(href="#")
