--- a/app/sass/tags.scss
+++ b/app/sass/tags.scss
@@ -12,7 +12,10 @@
 body {
     font-family: 'Georgia';
     line-height: 1.625;
-    letter-spacing: -.006em;
+}
+
+a {
+    transition: $transition;
 }
 
 h1,
