--- a/app/pug/layout/header.pug
+++ b/app/pug/layout/header.pug
@@ -12,5 +12,6 @@ header.header
                     a(href="#") Partners
                 li
                     a(href="#") Contact
+                .nav__underline
         .header__tel
             a(href="tel:+380996611730") +38 (099) 66-11-730
