HTML/CSS Programs (draft)

--- a/app/pug/blocks/top.pug
+++ b/app/pug/blocks/top.pug
@@ -1,4 +1,4 @@
-.top
+.top.darkblock
     .top-wrap
         .top-title.top-title_sm Intensive program barista training
         .title.top-title_lg Barista training in 
