--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -6,7 +6,7 @@ block variables
 block content
     include ../layout/header.pug
     include ../blocks/top.pug
-    include ../blocks/programs.pug
+    include ../blocks/programs/programs.pug
     include ../blocks/gallery.pug
     div
         | Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas distinctio quod corporis veniam quam beatae error deleniti, ex recusandae modi assumenda vero. Debitis aliquam fuga, totam porro ipsam sed doloremque.
