--- a/app/sass/blocks/top.scss
+++ b/app/sass/blocks/top.scss
@@ -5,7 +5,6 @@
     background-position: 93% bottom, center bottom, center;
     background-repeat: no-repeat;
     position: relative;
-    color: white;
     &-wrap {
         text-align: center;
         top: 50%;
@@ -17,6 +16,9 @@
         background-repeat: no-repeat;
         background-size: rem(91px), rem(154px);
         padding: rem(43px) 0 rem(34px);
+    }
+    .title {
+        color: white;
     }
     &-title {
         font-size: rem(22px);
