--- a/app/sass/tags.scss
+++ b/app/sass/tags.scss
@@ -12,6 +12,7 @@
 body {
     font-family: 'Georgia';
     line-height: 1.625;
+    color: #485260;
 }
 
 a {
@@ -25,6 +26,7 @@ h4,
 h5,
 h6 {
     font-family: 'RobotoBlack';
+    color: black;
 }
 
 button,
