HTML/CSS Projects block (draft). JS: Basic tabs function

--- a/app/pug/blocks/gallery.pug
+++ b/app/pug/blocks/gallery.pug
@@ -1,1 +1,2 @@
-.gallery gallery
+.gallery
+    .container Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod adipisci quaerat qui illo nemo totam magnam sunt rem? Consectetur ab quae officia, reiciendis facilis distinctio quod eum dolorum odit quas.
