--- a/app/pug/blocks/testimonials.pug
+++ b/app/pug/blocks/testimonials.pug
@@ -1,1 +1,2 @@
-.testimonials testimonials
+.testimonials
+    .container Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas labore dolorum libero vel debitis, facere aut provident temporibus. Similique tenetur fugit modi ad doloremque omnis quas inventore eveniet aperiam veritatis.
