--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -6,3 +6,5 @@ $gold: #eab96a;
 @import './style.scss';
 @import './layout/header.scss';
 @import './blocks/top.scss';
+@import './blocks/programs.scss';
+@import './elements/tabs.scss';
