--- a/app/sass/elements/tabs.scss
+++ b/app/sass/elements/tabs.scss
@@ -4,9 +4,7 @@
         text-align: center;
         position: relative;
         ul {
-            margin: 0;
-            padding: 0;
-            list-style: none;
+            @extend %list;
         }
         li {
             display: inline-block;
@@ -17,10 +15,9 @@
             }
         }
         a {
+            @extend %title;
             text-decoration: none;
             color: #adadad;
-            text-transform: uppercase;
-            font-family: 'RobotoBlack';
             font-size: rem(21px);
             letter-spacing: .12em;
             display: block;
@@ -30,8 +27,10 @@
     }
     &-pages {
         &>ul {
+            @extend %list;
             &>li {
                 display: none;
+                position: relative;
                 &.active {
                     display: block;
                 }
