--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -4,6 +4,7 @@ $gold: #eab96a;
 @import './_misc/mixins.scss';
 @import './tags.scss';
 @import './style.scss';
+@import './icons.scss';
 @import './layout/header.scss';
 @import './blocks/top.scss';
 @import './blocks/programs.scss';
