--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -23,14 +23,22 @@
     margin: 0 auto;
 }
 
-.title {
+%title {
     font-family: 'RobotoBlack';
+    text-transform: uppercase;
+}
+
+.title {
+    @extend %title;
     font-size: rem(50px);
     text-align: center;
-    text-transform: uppercase;
     letter-spacing: .1em;
     color: black;
     margin-bottom: rem(35px);
+    &_sm {
+        font-size: rem(17px);
+        text-align: left;
+    }
     &_stars {
         &:before,
         &:after {
