--- a/app/sass/tags.scss
+++ b/app/sass/tags.scss
@@ -13,6 +13,7 @@ body {
     font-family: 'Georgia';
     line-height: 1.625;
     color: #485260;
+    letter-spacing: -.01em;
 }
 
 a {
@@ -42,7 +43,7 @@ input[type="submit"] {
     color: white;
     text-transform: uppercase;
     letter-spacing: .08em;
-    padding: rem(20px) rem(60px);
+    padding: rem(17px) rem(60px);
     cursor: pointer;
     width: auto;
     @extend %hover;
@@ -68,4 +69,15 @@ input {
         border-color: #751818;
         color: #751818;
     }
+}
+
+table {
+    border-collapse: collapse;
+    border: rem(1px) solid black;
+}
+
+td,
+th {
+    padding: rem(6px) rem(16px) rem(5px);
+    border: rem(2px) solid black;
 }
