HTML/CSS Projects block. Projects background decorations

--- a/app/pug/blocks/programs/programs-basic.pug
+++ b/app/pug/blocks/programs/programs-basic.pug
@@ -1,5 +1,5 @@
 .programs-prev
-    .programs__header Basic
+    .programs__bg-title Basic
     .programs__img
         img(src="./img/blocks/programs/basic/preview.gif")
     .programs-prev-info
