--- a/app/pug/blocks/programs/programs.pug
+++ b/app/pug/blocks/programs/programs.pug
@@ -1,4 +1,8 @@
 .programs.lightblock
+    .programs__bg-top-left
+    .programs__bg-top-right
+    .programs__bg-bottom-left
+    .programs__bg-bottom-right
     .container
         .programs-header
             .title.title_stars Programs
