--- a/app/pug/blocks/top.pug
+++ b/app/pug/blocks/top.pug
@@ -6,3 +6,4 @@
         .top-title On the basis of the company's largest coffee roasters
     //- .top__scroll
     //-     a(href="#")
+.top__bg-granola
