HTML/CSS/JS Gallery

--- a/app/pug/blocks/gallery.pug
+++ b/app/pug/blocks/gallery.pug
@@ -1,2 +1,20 @@
-.gallery
-    .container Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod adipisci quaerat qui illo nemo totam magnam sunt rem? Consectetur ab quae officia, reiciendis facilis distinctio quod eum dolorum odit quas.
+.gallery.darkblock
+    .container
+        .title.gallery-title Gallery
+        .subtitle You yourself are testing the taste benefits of each method
+            br
+            | and select the type of cooking yourself
+    .gallery-slider
+        ul
+            li
+                img(src="./img/blocks/gallery/slide2.jpg")
+            li
+                img(src="./img/blocks/gallery/slide3.jpg")
+            li
+                img(src="./img/blocks/gallery/slide1.jpg")
+        .gallery-slider-nav
+            a(href="#").gallery-slider__toggle.gallery-slider__toggle_prev
+            span.gallery-slider__count 5 
+            span.gallery-slider__text from 
+            span.gallery-slider__count 10
+            a(href="#").gallery-slider__toggle.gallery-slider__toggle_next
