--- a/app/pug/blocks/programs/programs.pug
+++ b/app/pug/blocks/programs/programs.pug
@@ -5,7 +5,7 @@
     .programs__bg-bottom-right
     .container
         .programs-header
-            .title.title_stars Programs
+            .title.programs-title Programs
             .subtitle We share their experience and professional barista championships multiple winners
         .tabs
             .tabs-nav
