--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -5,7 +5,8 @@ $gold: #eab96a;
 @import './tags.scss';
 @import './style.scss';
 @import './icons.scss';
+@import './elements/tabs.scss';
 @import './layout/header.scss';
 @import './blocks/top.scss';
 @import './blocks/programs.scss';
-@import './elements/tabs.scss';
+@import './blocks/gallery.scss';
