HTML/CSS/JS Testimonials block

--- a/app/pug/blocks/gallery.pug
+++ b/app/pug/blocks/gallery.pug
@@ -5,12 +5,12 @@
             br
             | and select the type of cooking yourself
     .gallery-slider
-        ul
-            li
+        ul.gallery-slider-list
+            li.gallery-slider-item
                 img(src="./img/blocks/gallery/slide2.jpg")
-            li
+            li.gallery-slider-item
                 img(src="./img/blocks/gallery/slide3.jpg")
-            li
+            li.gallery-slider-item
                 img(src="./img/blocks/gallery/slide1.jpg")
         .gallery-slider-nav
             a(href="#").gallery-slider__toggle.gallery-slider__toggle_prev
