--- a/app/sass/_misc/mixins.scss
+++ b/app/sass/_misc/mixins.scss
@@ -27,6 +27,10 @@
     }
 }
 
+@function svg($svg, $width, $height) {
+    @return url('data:image/svg+xml;utf8,<svg width="'+$width+'" height="'+$height+'" xmlns="http://www.w3.org/2000/svg" >'+$svg+'</svg>');
+}
+
 @function rem($px) {
     @return $px / $html-font-size+0rem;
 }
