--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -10,3 +10,4 @@ $gold: #eab96a;
 @import './blocks/top.scss';
 @import './blocks/programs.scss';
 @import './blocks/gallery.scss';
+@import './blocks/testimonials.scss';
