--- a/app/sass/tags.scss
+++ b/app/sass/tags.scss
@@ -14,6 +14,9 @@ body {
     line-height: 1.625;
     color: #485260;
     letter-spacing: -.01em;
+    overflow-x: hidden;
+    background: url('../img/backgrounds/background-light.png');
+    background-size: rem(200px);
 }
 
 a {
