HTML/CSS/JS Partners block (draft). Small fixes in other blocks. Small changes in gulpfile

--- a/app/pug/blocks/partners.pug
+++ b/app/pug/blocks/partners.pug
@@ -1,7 +1,12 @@
 .partners
-    .title.partners-title Our partners
-    .partners-slider
-        ul.partners-slider-list
-            each logo in ['abajour_logo','altbee_logo','dedushka_logo','gdeburger_logo','logo_baden_baden','logo_klass']
-                li.partners-slider-item
-                    img(src="./img/blocks/partners/" + logo + '.png')
+    .container
+        .title.partners-title Our partners
+        .partners-slider
+            ul.partners-slider-list
+                each logo in ['abajour_logo','altbee_logo','dedushka_logo','gdeburger_logo','logo_baden_baden','logo_klass','abajour_logo','altbee_logo','dedushka_logo','gdeburger_logo','logo_baden_baden','logo_klass']
+                    li.partners-slider-item
+                        a(href="#" target="_blank")
+                            img(src="./img/blocks/partners/" + logo + '.png')
+            .slider-nav
+                a(href="#").slider__toggle.slider__toggle_prev
+                a(href="#").slider__toggle.slider__toggle_next
