--- a/app/pug/blocks/testimonials.pug
+++ b/app/pug/blocks/testimonials.pug
@@ -23,6 +23,6 @@
                         .testimonials-slider__text
                             | Lorem ipsum dolor sit amet...
                         - n++
-            .testimonials-slider-nav
-                a(href="#").testimonials-slider__toggle.testimonials-slider__toggle_prev
-                a(href="#").testimonials-slider__toggle.testimonials-slider__toggle_next
+            .slider-nav
+                a(href="#").slider__toggle.slider__toggle_prev
+                a(href="#").slider__toggle.slider__toggle_next
