--- a/app/pug/pages/index.pug
+++ b/app/pug/pages/index.pug
@@ -9,5 +9,6 @@ block content
     include ../blocks/programs/programs.pug
     include ../blocks/gallery.pug        
     include ../blocks/testimonials.pug
+    include ../blocks/partners.pug
     include ../blocks/feedback.pug
     include ../layout/footer.pug
