--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -11,3 +11,4 @@ $gold: #eab96a;
 @import './blocks/programs.scss';
 @import './blocks/gallery.scss';
 @import './blocks/testimonials.scss';
+@import './blocks/partners.scss';
