--- a/app/sass/blocks/testimonials.scss
+++ b/app/sass/blocks/testimonials.scss
@@ -1,8 +1,8 @@
 .testimonials {
     padding-top: rem(64px);
+    padding-bottom: rem(100px);
     &-slider {
         margin-top: rem(72px);
-        margin-bottom: rem(107px);
         position: relative;
         &-list {
             @extend %list;
@@ -72,23 +72,6 @@
                     left: 50%;
                     transform: translate(-50%, -50%);
                 }
-            }
-        }
-        &__toggle {
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            width: rem(150px);
-            height: 100%;
-            background-position: center;
-            background-repeat: no-repeat;
-            &_prev {
-                left: rem(-70px);
-                background-image: svg('<line x1="2" y1="10" x2="10" y2="2" style="stroke:#485260;stroke-width:2" /><line x1="2" y1="10" x2="10" y2="18" style="stroke:#485260;stroke-width:2" />', 10, 18);
-            }
-            &_next {
-                right: rem(-70px);
-                background-image: svg('<line x1="10" y1="10" x2="2" y2="2" style="stroke:#485260;stroke-width:2" /><line x1="10" y1="10" x2="2" y2="18" style="stroke:#485260;stroke-width:2" />', 10, 18);
             }
         }
     }
