--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -78,3 +78,24 @@
 .accent {
     color: $gold;
 }
+
+.slider {
+    &__toggle {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        width: rem(150px);
+        height: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        outline: none;
+        &_prev {
+            left: rem(-70px);
+            background-image: svg('<line x1="2" y1="10" x2="10" y2="2" style="stroke:#485260;stroke-width:2" /><line x1="2" y1="10" x2="10" y2="18" style="stroke:#485260;stroke-width:2" />', 10, 18);
+        }
+        &_next {
+            right: rem(-70px);
+            background-image: svg('<line x1="10" y1="10" x2="2" y2="2" style="stroke:#485260;stroke-width:2" /><line x1="10" y1="10" x2="2" y2="18" style="stroke:#485260;stroke-width:2" />', 10, 18);
+        }
+    }
+}
